# AuthTestSystem

./: .gitignore  Cargo.toml  docker-compose.yaml
api/v1/html/: auth.html  authorized.html  index.html  login.html
api/v1/js/: auth.js  index.js  login.js  logout.js
config/: .env  gen_keys.sh  template_device_config.json
scripts/: auth.js  login.js
src/: handler.rs  main.rs  models.rs  router.rs  server.rs  storage.rs
src/api/: handler.rs  router.rs
src/models/: user_model.rs
src/server/: server.rs
src/storage/: storage.rs
src/utils/: utils.rs
static/: auth.html  index.html  login.html
