[package]
name = "auth_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "*"
dotenv = "*"
actix = "*"
actix-web = { version = "*", features = ["openssl"] }
openssl = "*"
openssl-sys = "*"
tera = "*"
serde = "*"
serde_json = "*"
futures = "*"