[package]
name = "auth_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "*"
dotenv = "*"
actix = "*"
actix-web = { version = "*", features = ["openssl"] }
openssl = "*"
openssl-sys = "*"
tera = "*"
serde = "*"
serde_json = "*"
futures = "*"
deadpool-postgres = { version = "0.10.2", features = ["serde"] }
tokio-pg-mapper = "0.2.0"
tokio-pg-mapper-derive = "0.2.0"
tokio-postgres = "0.7.6"

sha3 = "*"